--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
+ENV=development
+JWT_SECRET="your_jwt_secret"
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=postgres
-
-JWT_SECRET="your_jwt_secret"
